<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="start_where">어디서</string>
    <string name="start_meet">만나역?</string>
    <string name="start_subtitle">모임을 위한 역을 찾아보세요</string>
    <string name="start_detail">지하철 노선간 거리를 기반으로\n중간 역을 찾아드립니다</string>
    <string name="title_activity_splash">스플래쉬 화면</string>
    
    <string name="add_title">역 입력하기</string>
    <string name="add_subtitle">중간 역을 찾으려 하는 역들을 입력하세요</string>
    <string name="detail_title">상세 이동 경로</string>
    <string name="error_title">오류가 발생했습니다.</string>
    <string name="error_detail1">서버와의 연결 상태나</string>
    <string name="error_detail2">역 간 최대 거리 설정을 확인해 주세요.</string>
    
    <string name="result_title">검색 결과</string>
    <string name="result_lookdetail">이동 경로 보기</string>
    <string name="result_closealert">역 간 거리가 너무 가깝습니다.</string>
     <string name="result_alert_message">역 간 거리가 너무 가깝습니다.</string>
     <string name="add_dialog_error_title">오류가 발생했습니다.</string>
    <string name="add_dialog_error_detail">2개 이상의 역을 입력해 주세요.</string>
    <string name="add_dialog_processing_title">검색 중입니다...</string>
     
     
     <string name="add_dialog_title">역 추가하기</string>
    <string name="app_name">어디서 만나역?</string>
    <string name="title_activity_detail">이동 경로</string>
    <string name="title_activity_error">오류</string>
    <string name="title_activity_add">역 추가하기</string>
    <string name="action_settings">설정</string>
    <string name="title_activity_result">검색 결과</string>

</resources>
