<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sl="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:gravity="center"
    tools:context="ho.Jun.ho.MainActivity" >
    
    <ho.Jun.ho.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_error"
        sl:scale_base_height="1280"
        sl:scale_base_width="800" >
 
            <TextView 
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            sl:scale_width="800"
            sl:scale_height="100"
            sl:scale_left="0"
            sl:scale_top="630"  
            sl:scale_textsize="50"
            android:gravity="center"
            android:text="@string/error_title"
            />
            
            
                 <TextView 
            android:id="@+id/error_detail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            sl:scale_width="800"
            sl:scale_height="100"
            sl:scale_left="0"
            sl:scale_top="770"  
            sl:scale_textsize="35"
            android:gravity="center"
            android:text="@string/error_detail1"
            />       
            
                       <TextView 
            android:id="@+id/error_detail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            sl:scale_width="800"
            sl:scale_height="100"
            sl:scale_left="0"
            sl:scale_top="830"  
            sl:scale_textsize="35"
            android:gravity="center"
            android:text="@string/error_detail2"
            />         
    
    </ho.Jun.ho.ScalableLayout>
 </RelativeLayout>